# OpenCL_Learning

./: .gitignore  README.md
Chap1/: CMakeLists.txt  Chap1.cbp  Chap1.depend  Chap1.layout  matvec.c
Chap10/: CMakeLists.txt
Chap11/: CMakeLists.txt  bsort.c
Chap12/: CMakeLists.txt  matrix_mult.c  transpose.c
Chap13/: CMakeLists.txt  conj_grad.c  read_mm.c  steep_desc.c  steep_desc.cl
Chap14/: CMakeLists.txt  fft.c
Chap15/: CMakeLists.txt  basic_interop.c  sphere.c
Chap2/: CMakeLists.txt  Chap2.cbp  Chap2.depend  Chap2.layout  bad.cl  device_ext_test.c  kernel_search.c  platform_ext_test.c  program_build.c
Chap3/: CMakeLists.txt  Chap3.cbp  Chap3.depend  Chap3.layout  buffer_check.c  buffer_test.c  map_copy.c
Chap4/: CMakeLists.txt  Chap4.cbp  Chap4.depend  Chap4.layout  double_test.c  float_config.c  hello_kernel.c  hello_kernel.cl  vector_bytes.c  vector_widths.c
Chap5/: CMakeLists.txt  Chap5.cbp  Chap5.depend  Chap5.layout  mad_test.c  mad_test.cl  mod_round.c
Chap6/: CMakeLists.txt  Chap6.cbp  Chap6.depend  Chap6.layout  interp.c  interp.cl  interp_gnu.c  interp_gnu.cl  simple_image.c
Chap7/: CMakeLists.txt  Chap7.cbp  Chap7.depend  atomic.c  callback.c  user_event.c
Chap8/: CMakeLists.txt  buffer_test.cpp  callback.cpp  create_kernels.cpp  full_context.cpp  linear_interp.cl  linear_interp.cpp  map_copy.cpp  profile.cpp  sub_buffer.cpp  user_event.cpp
