cmake_minimum_required(VERSION 3.5)

project(Chap2 LANGUAGES C)
include_directories("C:/Intel/OpenCL/sdk/include")
#link_directories("C:/Intel/OpenCL/sdk/lib/x64")
link_directories("C:/Intel/NVIDIA GPU Computing SDK/OpenCL/common/lib/x64")
#add_library(OpenCL STATIC IMPORTED)
link_libraries(OpenCL.lib)
configure_file(bad.cl ${CMAKE_CURRENT_BINARY_DIR}/bad.cl COPYONLY)
configure_file(blank.cl ${CMAKE_CURRENT_BINARY_DIR}/blank.cl COPYONLY)
configure_file(good.cl ${CMAKE_CURRENT_BINARY_DIR}/good.cl COPYONLY)
configure_file(test.cl ${CMAKE_CURRENT_BINARY_DIR}/test.cl COPYONLY)
#add_executable(Chap2 context_count.c)
#add_executable(Chap2 device_ext_test.c)
#add_executable(Chap2 kernel_search.c)
add_executable(Chap2 platform_ext_test.c)
#add_executable(Chap2 program_build.c)
#add_executable(Chap2 queue_kernel.c)
