cmake_minimum_required(VERSION 3.5)

project(Chap4 LANGUAGES C)
include_directories("C:/Intel/OpenCL/sdk/include")
link_directories("C:/Intel/OpenCL/sdk/lib/x64")
#link_directories("C:/Intel/NVIDIA GPU Computing SDK/OpenCL/common/lib/x64")
#add_library(OpenCL STATIC IMPORTED)
link_libraries(OpenCL.lib)
configure_file(double_test.cl ${CMAKE_CURRENT_BINARY_DIR}/double_test.cl COPYONLY)
configure_file(hello_kernel.cl ${CMAKE_CURRENT_BINARY_DIR}/hello_kernel.cl COPYONLY)
configure_file(vector_bytes.cl ${CMAKE_CURRENT_BINARY_DIR}/vector_bytes.cl COPYONLY)
add_executable(Chap4 double_test.c)
#add_executable(Chap4 float_config.c)
#add_executable(Chap4 hello_kernel.c)
#add_executable(Chap4 vector_bytes.c)
#add_executable(Chap4 vector_widths.c)

