cmake_minimum_required(VERSION 3.5)

project(Chap5 LANGUAGES C)
include_directories("C:/Intel/OpenCL/sdk/include")
#link_directories("C:/Intel/OpenCL/sdk/lib/x64")
link_directories("C:/Intel/NVIDIA GPU Computing SDK/OpenCL/common/lib/x64")
#add_library(OpenCL STATIC IMPORTED)
link_libraries(OpenCL.lib)
configure_file(id_check.cl ${CMAKE_CURRENT_BINARY_DIR}/id_check.cl COPYONLY)
configure_file(mad_test.cl ${CMAKE_CURRENT_BINARY_DIR}/mad_test.cl COPYONLY)
configure_file(mod_round.cl ${CMAKE_CURRENT_BINARY_DIR}/mod_round.cl COPYONLY)
configure_file(polar_rect.cl ${CMAKE_CURRENT_BINARY_DIR}/polar_rect.cl COPYONLY)
configure_file(select_test.cl ${CMAKE_CURRENT_BINARY_DIR}/select_test.cl COPYONLY)
configure_file(shuffle_test.cl ${CMAKE_CURRENT_BINARY_DIR}/shuffle_test.cl COPYONLY)
#add_executable(Chap5 id_check.c)
#add_executable(Chap5 mad_test.c)
#add_executable(Chap5 mod_round.c)
#add_executable(Chap5 polar_rect.c)
#add_executable(Chap5 select_test.c)
add_executable(Chap5 shuffle_test.c)
