cmake_minimum_required(VERSION 3.5)

project(Chap7 LANGUAGES C)
include_directories("C:/Intel/OpenCL/sdk/include")
#link_directories("C:/Intel/OpenCL/sdk/lib/x64")
link_directories("C:/Intel/NVIDIA GPU Computing SDK/OpenCL/common/lib/x64")
#add_library(OpenCL STATIC IMPORTED)
link_libraries(OpenCL.lib)
configure_file(atomic.cl ${CMAKE_CURRENT_BINARY_DIR}/atomic.cl COPYONLY)
configure_file(callback.cl ${CMAKE_CURRENT_BINARY_DIR}/callback.cl COPYONLY)
configure_file(profile_items.cl ${CMAKE_CURRENT_BINARY_DIR}/profile_items.cl COPYONLY)
configure_file(profile_read.cl ${CMAKE_CURRENT_BINARY_DIR}/profile_read.cl COPYONLY)
configure_file(user_event.cl ${CMAKE_CURRENT_BINARY_DIR}/user_event.cl COPYONLY)
#add_executable(Chap7 atomic.c)
#add_executable(Chap7 callback.c)
add_executable(Chap7 profile_items.c)
#add_executable(Chap7 profile_read.c)
#add_executable(Chap7 user_event.c)
